1st version of figma

--- a/projectroom/Views/Home/Index.cshtml
+++ b/projectroom/Views/Home/Index.cshtml
@@ -2,7 +2,54 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
+<article class="intro mb-5 px-5">
+    <div class="ps-5 pb-5 mb-5">
+        <h1>Pitushara</h1>
+        <p>Web Design</p>
+    </div>
+    <div class="hellocard text-center p-5">
+        <h2 class="mb-5">Hello!</h2>
+        <p class="pb-5">We are a young team of dolboebi leaving in ukraine delaem sayti</p>
+        <div class="text-motion-wrapper pt-5 mt-5">
+            <p class="text-motion mb-0">AM I CURSED? AM I CURSED? AM I CURSED? AM I CURSED? AM I CURSED? AM I CURSED?</p>
+            <p class="text-motion mb-0">AM I CURSED? AM I CURSED? AM I CURSED? AM I CURSED? AM I CURSED? AM I CURSED?</p>
+        </div>
+    </div>
+</article>
+
+<section class="container my-5 p-5"> 
+    <div class="projects">
+        <article class="card">            
+            <div class="description p-3">
+                <h2>Design of german salon krasoti</h2>
+                <p>pidori risovali etu huynyu</p>
+            </div>
+            <img src="~/img/main/Beauty Salon.png" alt="Project Picture 1">
+        </article> 
+        <article class="card">            
+            <div class="description p-3">
+                <h2>Design of german salon krasoti</h2>
+                <p>pidori risovali etu huynyu</p>
+            </div>
+            <img src="~/img/main/Beauty Salon.png" alt="Project Picture 2">
+        </article>
+    </div>
+    <div class="members">
+        <article class="card"> 
+            <img src="~/img/main/Superfly.png" alt="Profile Picture 1">
+            <h2>Dmitry Superfly</h2>
+            <p>Design director</p>
+        </article> 
+        <article class="card"> 
+            <img src="~/img/main/Superfly.png" alt="Profile Picture 2">
+            <h2>Заголовок 3</h2>
+            <p>Описание карточки 3</p> 
+        </article> 
+    </div> 
+</section>
+
+<section class="text-center my-5 py-5">
+    <h2>How can you find us?</h2>
+</section>
+
