--- a/projectroom/wwwroot/css/site.css
+++ b/projectroom/wwwroot/css/site.css
@@ -1,7 +1,3 @@
-html {
-  font-size: 14px;
-}
-
 @media (min-width: 768px) {
   html {
     font-size: 16px;
@@ -13,12 +9,18 @@ html {
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
+    font-size: 20px;
+    overflow-x: hidden;
 }
 
 body {
-  margin-bottom: 60px;
+    font-family: 'Press Start 2P', cursive;
+    background-image: url('../img/main/back.jpg');
+    color: white;
+    text-shadow: 0 0 20px white;
+    overflow-x: hidden;
 }
 
 .form-floating > .form-control-plaintext::placeholder, .form-floating > .form-control::placeholder {
@@ -29,3 +31,105 @@ body {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
   text-align: start;
 }
+
+.intro {
+    background-image: url('../img/main/planets.png');
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    width: 100%;
+    height: 100vh; 
+}
+
+
+.hellocard {
+    backdrop-filter: blur(20px);
+    border-radius: 25px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.24);
+}
+
+.text-motion-wrapper {
+    display: flex;
+    overflow: hidden;
+    width: 100%;
+}
+
+.text-motion {
+    white-space: nowrap; 
+    animation: move-right-card 10s linear infinite; 
+    padding-left: 100%;
+}
+
+@keyframes move-right-card {
+    0% {
+        transform: translateX(-100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    max-width: 100%;
+}
+.projects {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    justify-content: space-around;
+}
+    .projects .card {
+        display: flex;
+        flex-direction: row;
+    }
+
+.members {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+    .members .card {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 505px;
+        justify-content: flex-start;
+    }
+        .members .card img {
+            border-radius: 50%;
+            margin-bottom: 30px;
+        }
+        .members .card h2 {
+            white-space: nowrap;
+        }
+
+.card {
+    backdrop-filter: blur(20px);
+    border-radius: 25px;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    background-color: rgba(217, 217, 217, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.24);
+    color: white;
+}
+
+
+    .card h2 {
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+
+    .card p {
+        font-size: 15px;
+    }
+
+
+
+
+
