fixing move-right animation, elements, blur_picture

--- a/projectroom/Views/Shared/_Layout.cshtml
+++ b/projectroom/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="~/projectroom.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header class="mb-5 p-5 p-5 ps-5 pe-5">
+    <header class="mb-5 p-5 mx-4">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light ps-1 pe-1 mb-5">
             <div class="container-fluid">
                 <a class="navbar-brand me-0" asp-area="" asp-controller="Home" asp-action="Index">
@@ -29,7 +29,7 @@
     </main>
 
     <footer class="footer text-center">
-        <p>&copy; 2025 Pitushara Web Design. All rights reserved.
+        <p>&copy; all rights are copied
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
