--- a/projectroom/Views/Home/Index.cshtml
+++ b/projectroom/Views/Home/Index.cshtml
@@ -4,16 +4,16 @@
 
 
 <article class="intro mb-5 px-5">
-    <div class="ps-5 pb-5 mb-5">
-        <h1>Pitushara</h1>
-        <p>Web Design</p>
+    <div class="ps-5 pb-5 mb-5 ms-3">
+        <h1>FluidParty</h1>
+        <p>Web-App Development</p>
     </div>
     <div class="hellocard text-center p-5">
         <h2 class="mb-5">Hello!</h2>
-        <p class="pb-5">We are a young team of dolboebi leaving in ukraine delaem sayti</p>
-        <div class="text-motion-wrapper pt-5 mt-5">
-            <p class="text-motion mb-0">AM I CURSED? AM I CURSED? AM I CURSED? AM I CURSED? AM I CURSED? AM I CURSED?</p>
-            <p class="text-motion mb-0">AM I CURSED? AM I CURSED? AM I CURSED? AM I CURSED? AM I CURSED? AM I CURSED?</p>
+        <p class="pb-5 intro-descrtiption">We are a team of young, ambitious programmers who are passionate about creating high-quality and stylish web design. Our projects are not just websites, but carefully thought-out and technologically advanced solutions that help businesses realize their potential on the Internet. We are always looking for new ideas and non-standard approaches to make interfaces not only beautiful, but also convenient for users. Each of our projects is the result of teamwork, creativity and the desire for perfection. We are ready to bring your idea to life!</p>
+        <div class="text-motion-wrapper mt-5">
+            <p class="text-motion mb-0">AM I CURSED? AM I CURSED? AM I CURSED? AM I CURSED? AM I CURSED? AM I CURSED? </p>
+            <p class="text-motion mb-0">AM I CURSED? AM I CURSED? AM I CURSED? AM I CURSED? AM I CURSED? AM I CURSED? </p>
         </div>
     </div>
 </article>
@@ -22,7 +22,7 @@
     <div class="projects">
         <article class="card">            
             <div class="description p-3">
-                <h2>Design of german salon krasoti</h2>
+                <h2>German Beauty Salon</h2>
                 <p>pidori risovali etu huynyu</p>
             </div>
             <img src="~/img/main/Beauty Salon.png" alt="Project Picture 1">
