added links on social networking

--- a/projectroom/Views/Home/Index.cshtml
+++ b/projectroom/Views/Home/Index.cshtml
@@ -23,14 +23,14 @@
         <article class="card">            
             <div class="description p-3">
                 <h2>German Beauty Salon</h2>
-                <p>pidori risovali etu huynyu</p>
+                <p>Complete order for a client from beauty sphere</p>
             </div>
             <img src="~/img/main/Beauty Salon.png" alt="Project Picture 1">
         </article> 
         <article class="card">            
             <div class="description p-3">
                 <h2>Design of german salon krasoti</h2>
-                <p>pidori risovali etu huynyu</p>
+                <p>mamat kunem</p>
             </div>
             <img src="~/img/main/Beauty Salon.png" alt="Project Picture 2">
         </article>
@@ -51,5 +51,19 @@
 
 <section class="text-center my-5 py-5">
     <h2>How can you find us?</h2>
+    <div class="options mx-5">
+        <div class="option">
+            <img src="~/img/main/at_icon.png" alt="At Icon" class="icon">
+            <input type="text" value="suskorov@gmail.com" readonly>
+        </div>
+        <div class="option">
+            <img src="~/img/main/tg_icon.png" alt="Tg Icon" class="icon">
+            <input type="text" value="penis" readonly>
+        </div>
+        <div class="option">
+            <img src="~/img/main/tt_icon.png" alt="TT Icon" class="icon">
+            <input type="text" value="pickme" readonly>
+        </div>
+    </div>
 </section>
 
