--- a/projectroom/wwwroot/css/site.css
+++ b/projectroom/wwwroot/css/site.css
@@ -132,6 +132,37 @@ body {
         font-size: 15px;
     }
 
+.options {
+    display: flex;
+    justify-content: space-between;
+}
+
+.option {
+    padding-inline: 2vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+input {
+    font-size: 1rem;
+    text-align: center;
+    background-color: white;
+    border: none;
+    border-radius: 50px;
+    padding: 10px;
+    color: black;
+    width: 100%;
+    box-shadow: 0 0 10px #ffffff;
+    outline: none;
+    cursor: not-allowed;
+}
+
+    input:focus {
+        box-shadow: 0 0 15px #ffffff;
+    }
+
 
 /*.intro-descrtiption {
     overflow: hidden;
